--- a/frontend/src/pages/Auth/Auth.module.css
+++ b/frontend/src/pages/Auth/Auth.module.css
@@ -14,6 +14,10 @@
 
 }
 
+.loginContainer a{
+    text-align: center;
+}
+
 .loginContainer h2,
 .registerContainer h2{
     text-align: center;
@@ -28,7 +32,6 @@
     align-items: center;
     justify-content: center;
     padding-bottom: 1.5em;
-    /*margin-bottom: 1.5em;*/
 }
 
 .loginTitle{
@@ -45,7 +48,7 @@
 
 .inputBox input{
     margin: 0 0 0.5em 0;
-    width: 90%;
+    width: 98%;
     height: 100%;
     border: none;
     outline: none;
@@ -53,9 +56,9 @@
     font-size: 16px;
 }
 
-.inputBox FaUser, FaLock{
+.falock, .faenvelope{
     position: absolute;
-    right: 20px;
+    right: 5px;
     top: 50%;
     transform: translateY(-50%);
 }
@@ -78,5 +81,5 @@
 }
 
 .forgotPassword{
-    color: #0000EE;
+    color: #0000EE;   
 }
