--- a/frontend/src/components/Navbar/Navbar.module.css
+++ b/frontend/src/components/Navbar/Navbar.module.css
@@ -28,17 +28,24 @@
     color: #d3d3d3;
 }
 
-.userIcon, .userName{
-    color: #FFFF;
+.userName{
     margin-left: 0.2em;
 }
 
 .userNameContainer{
     cursor: pointer;
+    padding-bottom: 12px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 12px;
+    color: #FFFF;
 }
 
-.userNameContainer:hover .userName:hover{
-    cursor: pointer;
+.userNameContainer span{
+    padding: 0px;
+}
+
+.userNameContainer:hover{
     background-color: white;
     color: #000;
 }
