--- a/frontend/src/components/Sidebar/Sidebar.module.css
+++ b/frontend/src/components/Sidebar/Sidebar.module.css
@@ -1,5 +1,18 @@
+.background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 1000;
+  }
+
 .sidebar{
-    background-color: #191919;
+    background-color: white;
     position: fixed;
     height: 100%;
     top: 0px;
@@ -8,7 +21,7 @@
 }
 
 .timesIcon{
-    color: #FFFF;
+    color:  black;
     cursor: pointer;
     position: fixed;
     width: 30px;
