--- a/frontend/src/components/UserMenu/UserMenu.module.css
+++ b/frontend/src/components/UserMenu/UserMenu.module.css
@@ -1,3 +1,16 @@
+.background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1000;
+}
+
 .userMenu{
     position: absolute;
     top: 4.5rem;
