--- a/frontend/src/components/AddEquipment/AddEquipment.module.css
+++ b/frontend/src/components/AddEquipment/AddEquipment.module.css
@@ -38,8 +38,8 @@
 .inputBox{
     position: relative;
     display: inline;
-    width: 100%;
-    height: 25px;
+    width: 60vh;
+    height: 40px;
     margin: 5px 0;
 }
 
