--- a/frontend/src/components/AddLoan/AddLoan.module.css
+++ b/frontend/src/components/AddLoan/AddLoan.module.css
@@ -77,6 +77,7 @@
     width: 100%;
     padding: 8px;
     text-align: center;
+    border: none;
     border-top: 1px solid #ccc;
     background-color: #f9f9f9;
     cursor: pointer;
