--- a/frontend/src/pages/EquipmentList/EquipmentList.module.css
+++ b/frontend/src/pages/EquipmentList/EquipmentList.module.css
@@ -1,3 +1,33 @@
+.equipmentsHeader{
+    justify-content: center;
+    align-items: center;
+    margin-left: 5em;
+    margin-right: 5em;
+    margin-bottom: 0;
+    margin-top: 1.5em;
+    padding: 1em;
+    background-color: fff5;
+    backdrop-filter: blur(7px);
+    box-shadow: 0 .4rem .8rem #0005;
+    border-radius: .42rem;
+}
+
+.equipmentsHeader h3{
+    margin: 0;
+}
+
+.equipmentsContainer{
+    justify-content: center;
+    align-items: center;
+    margin: 5em;
+    margin-top: 2em;
+    padding: 0;
+    background-color: fff5;
+    backdrop-filter: blur(7px);
+    box-shadow: 0 .4rem .8rem #0005;
+    border-radius: .42rem;
+}
+
 .items{
     display: grid;
     justify-content: center;
