--- a/frontend/src/pages/LoanList/LoanList.module.css
+++ b/frontend/src/pages/LoanList/LoanList.module.css
@@ -3,7 +3,7 @@
     align-items: center;
     margin: 5em;
     padding: 1em;
-    background-color: fff5;
+    background-color: #fff5;
     backdrop-filter: blur(7px);
     box-shadow: 0 .4rem .8rem #0005;
     border-radius: .42rem;
@@ -72,4 +72,53 @@ td {
 
 .statusEmAndamento{
     color: #b30021;
+}
+
+.topListButtons{
+    align-items: center;
+    justify-content: right;
+    height: 100%;
+    display: flex;
+}
+
+.newItemButton{
+    cursor: pointer;
+    width: 40px;
+    height: 100%;
+    padding: 2.8px;
+    justify-content: center;
+    align-items: center;
+    color: antiquewhite;
+    background-color: #25c19c;
+    border: 0;
+    border-radius: 10%;
+    font-size: 1.2em;
+    margin: 0.2em;
+    margin-bottom: 0;
+}
+.newItemButton:hover{
+    color: black;
+    background-color: white;
+    box-shadow: 2px 2px 2px rgb(52, 52, 52);
+}
+
+.filterButton{
+    cursor: pointer;
+    width: 40px;
+    height: 100%;
+    padding: 5px;
+    justify-content: center;
+    align-items: center;
+    color: antiquewhite;
+    background-color: #2a8bf2;
+    border: 0;
+    border-radius: 10%;
+    font-size: 1em;
+    margin: 0.2em;
+    margin-bottom: 0;
+}
+.filterButton:hover{
+    color: black;
+    background-color: white;
+    box-shadow: 2px 2px 2px rgb(52, 52, 52);
 }
