--- a/frontend/src/pages/EquipmentList/EquipmentList.module.css
+++ b/frontend/src/pages/EquipmentList/EquipmentList.module.css
@@ -1,26 +1,34 @@
 .equipmentsHeader{
-    justify-content: center;
+    display: flex;
+    justify-content: start;
     align-items: center;
     margin-left: 5em;
     margin-right: 5em;
     margin-bottom: 0;
     margin-top: 1.5em;
-    padding: 1em;
+    padding: 1.5em 3em 0.5em;
     background-color: fff5;
     backdrop-filter: blur(7px);
     box-shadow: 0 .4rem .8rem #0005;
     border-radius: .42rem;
 }
 
-.equipmentsHeader h3{
+.equipmentsHeader h2{
     margin: 0;
+}
+
+.equipmentsHeader label{
+    padding-right: 0.2em;
+    font-size: 20px;
+    width: 20px;
+    height: 20px;
+    color: blue;
 }
 
 .equipmentsContainer{
     justify-content: center;
     align-items: center;
-    margin: 5em;
-    margin-top: 2em;
+    margin: 1em 5em 5em;
     padding: 0;
     background-color: fff5;
     backdrop-filter: blur(7px);
