--- a/frontend/src/pages/LoanList/LoanList.module.css
+++ b/frontend/src/pages/LoanList/LoanList.module.css
@@ -1,7 +1,34 @@
+.loansHeader{
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    margin-left: 5em;
+    margin-right: 5em;
+    margin-bottom: 0;
+    margin-top: 1.5em;
+    padding: 1.5em 3em 0.5em;
+    background-color: fff5;
+    backdrop-filter: blur(7px);
+    box-shadow: 0 .4rem .8rem #0005;
+    border-radius: .42rem;
+}
+
+.loansHeader h2{
+    margin: 0;
+}
+
+.loansHeader label{
+    padding-right: 0.2em;
+    font-size: 20px;
+    width: 20px;
+    height: 20px;
+    color: blue;
+}
+
 .loanListTable{
     justify-content: center;
     align-items: center;
-    margin: 5em;
+    margin: 1em 5em 5em;
     padding: 1em;
     background-color: #fff5;
     backdrop-filter: blur(7px);
@@ -14,7 +41,7 @@
     min-height: 100vh;
     border-collapse: collapse;
     width: 82vw;
-    height: 90vh;
+    min-height: 10vh;
     margin: 3rem;
 }
 
