--- a/frontend/src/components/Modal/Modal.module.css
+++ b/frontend/src/components/Modal/Modal.module.css
@@ -13,10 +13,10 @@
   
   .Modal {
     background: white;
-    padding: 20px;
+    padding: 5vh;
     border-radius: 8px;
     max-width: 700px;
-    width: 90%;
+    width: auto;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     position: relative;
   }
@@ -26,11 +26,6 @@
     justify-content: flex-end;
   }
   
-  .timesIcon {
-    cursor: pointer;
-    font-size: 1.5rem;
-    color: #555;
-  }
   
   .content {
     margin-top: 20px;
@@ -41,7 +36,9 @@
 .timesIcon{
     color: #000000;
     cursor: pointer;
-    position: fixed;
+    position: absolute;
+    right: 10px;
+    top: 10px;
     width: 30px;
     height: 30px;
     margin-top: 3px;
