--- a/frontend/src/pages/EquipmentList/EquipmentList.module.css
+++ b/frontend/src/pages/EquipmentList/EquipmentList.module.css
@@ -37,6 +37,9 @@
     border-radius: .42rem;
 }
 
+
+
+
 .items{
     display: grid;
     justify-content: center;
@@ -49,9 +52,9 @@
 }
 .topListBar{
     display: flex;
-    justify-content: first baseline;
+    justify-content: right;
     padding: 0.5em 2em;
-    margin: 1em 4em 0 4em;
+    margin: 1em;
 }
 .equipmentBox{
     border-radius: 10px;
