--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,4 +1,23 @@
 .container {
-  min-height: 60vh;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
   margin-bottom: 5em;
+}
+
+.appContainer{
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.content{
+  flex: 1;
+}
+
+.footer{
+  background: #036;
+  color: white;
+  padding: 0.1px;
+  text-align: center;
 }
