--- a/frontend/src/components/Footer/Footer.module.css
+++ b/frontend/src/components/Footer/Footer.module.css
@@ -2,7 +2,7 @@
     height: 25px;
     width: 100%;
     display: flex;
-    position: fixed;
+    position: absolute;
     flex-direction: column;
     bottom: 0;
     left: 0;
