--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,7 +1,8 @@
-body{
+html, body{
   background-color: #f6fcff;
   padding: 0;
   margin: 0;
+  height: 100%;
   font-family: "Roboto", sans-serif;
 }
 
