--- a/frontend/src/pages/LoanList/LoanList.module.css
+++ b/frontend/src/pages/LoanList/LoanList.module.css
@@ -2,10 +2,7 @@
     display: flex;
     justify-content: start;
     align-items: center;
-    margin-left: 5em;
-    margin-right: 5em;
-    margin-bottom: 0;
-    margin-top: 1.5em;
+    margin: 1.5em 2em 0em;
     padding: 1em 2em 1em;
     background-color: #fff5;
     color: #202020;
@@ -29,24 +26,23 @@
 .loanListTable{
     justify-content: center;
     align-items: center;
-    margin: 1em 5em 5em;
-    padding: 1em;
+    margin: 1em 2em 5em;
+    padding: 1em 0em 0em;
     background-color: #fff5;
     backdrop-filter: blur(7px);
     box-shadow: 0 .2rem .4rem #0005;
     border-radius: .42rem;
     overflow: auto;
-    min-width: 600px;
+    min-width: 30vw;
     border-collapse: collapse;
 }
 
 .loanListTable table{ 
     border: none;
-    min-height: 100vh;
     border-collapse: collapse;
-    width: 82vw;
+    width: 100%;
     min-height: 10vh;
-    margin: 3rem;
+    margin: 3rem 1rem 0rem;
 }
 
 .loanListTable th, td{
@@ -54,9 +50,11 @@
     white-space: nowrap;
 }
 
-.tableBody{
-    justify-content: center;
-    align-items: center;
+.evenRow{
+    background-color: #ffffff;
+}
+.oddRow{
+    background-color: #D9D9D9;
 }
 
 
@@ -66,6 +64,11 @@ th {
 
 td {
     text-align: center;
+}
+
+.tableHeader{
+    background-color: #036;
+    color: white;
 }
 
 .tableBody button{
@@ -85,7 +88,7 @@ td {
 }
 
 .editLoanButton{
-    background-color: #006b21;
+    background-color: #036;
 }
 .undoLoanButton{
     background-color: #ffbb2f;
@@ -95,9 +98,7 @@ td {
     background-color: #F42525;
 }
 
-.statusBase{
-    
-    padding: .4rem;
+.statusBase{   
     border-radius: 2rem;
     color: aliceblue;
 }
