--- a/frontend/src/pages/EquipmentList/EquipmentList.module.css
+++ b/frontend/src/pages/EquipmentList/EquipmentList.module.css
@@ -112,21 +112,32 @@
     background-color: white;
     box-shadow: 2px 2px 2px rgb(52, 52, 52);
 }
-.searchBarContainer{
-    width: 100%;
-}
-.searchBar{
-    border: 0px;
-    border-bottom: 1px solid #484848;;
-    margin: 0px;
-    color: #484848;
-    background-color: #f6fcff;
-    outline: 0;
+
+.exportButton{
+    cursor: pointer;
+    width: 40px;
     height: 100%;
-    width: 100%;
+    padding: 5px;
+    justify-content: center;
+    align-items: center;
+    color: antiquewhite;
+    background-color: #eb9b46;
+    border: 0;
+    border-radius: 10%;
+    font-size: 1em;
+    margin: 0.2em;
+    margin-bottom: 0;
 }
-.searchBar:hover{
-    box-shadow: 0px 0.2px 0.5px rgb(52, 52, 52);
+.exportButton:hover{
+    color: black;
+    background-color: white;
+    box-shadow: 2px 2px 2px rgb(52, 52, 52);
+}
+
+.pipe{
+    color: black;
+    font-weight: bold;
+    padding: 0 5px 0;
 }
 .topListButtons{
     align-items: center;
