--- a/frontend/src/pages/EquipmentList/EquipmentList.module.css
+++ b/frontend/src/pages/EquipmentList/EquipmentList.module.css
@@ -152,6 +152,23 @@
     display: flex;
 }
 
+.editEquipmentButton{
+    cursor: pointer;
+    width: 30px;
+    height: 100%;
+    padding: 2.8px;
+    padding-top: 5px;
+    justify-content: center;
+    align-items: center;
+    color: antiquewhite;
+    background-color: #036;
+    border: 0;
+    border-radius: 10%;
+    font-size: 1em;
+    margin: 0.2em;
+    margin-bottom: 0;
+}
+
 .loanItemButton{
     cursor: pointer;
     width: 30px;
