--- a/frontend/src/pages/Auth/Users/Users.module.css
+++ b/frontend/src/pages/Auth/Users/Users.module.css
@@ -44,7 +44,7 @@
     justify-content: center;
     align-items: center;
     margin: 1em 2em 5em;
-    padding: 1em 0em 0em;
+    padding: 0em;
     background-color: #fff5;
     backdrop-filter: blur(7px);
     box-shadow: 0 .2rem .4rem #0005;
@@ -78,4 +78,84 @@
 }
 .oddRow{
     background-color: #D9D9D9;
+}
+
+.topListButtons{
+    align-items: center;
+    justify-content: right;
+    height: 100%;
+    display: flex;
+    margin-right: 1vw;
+}
+
+.newItemButton{
+    cursor: pointer;
+    width: 40px;
+    height: 100%;
+    padding: 2.8px;
+    justify-content: center;
+    align-items: center;
+    color: antiquewhite;
+    background-color: #25c19c;
+    border: 0;
+    border-radius: 10%;
+    font-size: 1.2em;
+    margin: 0.2em;
+    margin-bottom: 0;
+}
+.newItemButton:hover{
+    color: black;
+    background-color: white;
+    box-shadow: 2px 2px 2px rgb(52, 52, 52);
+}
+
+.filterButton{
+    cursor: pointer;
+    width: 40px;
+    height: 100%;
+    padding: 5px;
+    justify-content: center;
+    align-items: center;
+    color: antiquewhite;
+    background-color: #2a8bf2;
+    border: 0;
+    border-radius: 10%;
+    font-size: 1em;
+    margin: 0.2em;
+    margin-bottom: 0;
+}
+.filterButton:hover{
+    color: black;
+    background-color: white;
+    box-shadow: 2px 2px 2px rgb(52, 52, 52);
+}
+
+.pipe{
+    color: black;
+    font-weight: bold;
+    padding: 0 5px 0;
+}
+
+.tableBody button{
+    cursor: pointer;
+    width: 35px;
+    height: 35px;
+    padding: 2.8px;
+    padding-top: 5px;
+    justify-content: center;
+    align-items: center;
+    color: antiquewhite;
+    border: 0;
+    border-radius: 10%;
+    font-size: 1em;
+    margin: 0.2em;
+    margin-bottom: 0;
+}
+
+.editUserButton{
+    background-color: #036;
+}
+
+.deleteUserButton{
+    background-color: #F42525;
 }
