--- a/frontend/src/components/AddEquipment/AddEquipment.module.css
+++ b/frontend/src/components/AddEquipment/AddEquipment.module.css
@@ -69,7 +69,7 @@
     border-radius: 3px;
     cursor: pointer;
     height: 30px;
-    width: 60vh;
+    max-width: 60vh;
     margin: 10px 0;
 }
 
